# Metamong_back

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
colyseus-server/: .gitignore  Dockerfile  package-lock.json
fastapi-backend/: .gitignore  Dockerfile  README.md  README_UV.md  pyproject.toml
fastapi-backend/app/: main.py
fastapi-backend/app/core/: config.py
fastapi-backend/app/db/: models.py  session.py
